bynkc/tests/fixtures/positive/85_service_simple/src/demo/svc.bynk
context demo.svc

service echo {
  on call(message: String) -> Effect[String] {
    Effect.pure(message)
  }
}
