bynkc/tests/fixtures/negative/66_given_unused_capability/src/demo/svc.bynk
context demo.svc

capability Logger {
  fn log(message: String) -> Effect[()]
}

service silent {
  on call() -> Effect[()] given Logger {
    Effect.pure(())
  }
}
